#64402 replaced Collectors.toList() with Stream.toList()